tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__GettingAround-bAal8kZ3R8eRTwaHgbYkKA==__FluidLoaderandUn-AAAAAAAAAAAAAAAAAAAEng==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1182,
  "prerequisites": [
    866
  ],
  "properties": {
    "auto_claim": false,
    "desc": "If you plan to automate the oil transport from your oil field far away, you need a fluid loader and unloader. A locking track will stop the train as long as oil is loaded or unloaded.\n\n[note]PS: You should probably use the Long Distance Fluid Pipeline once you can make it in LV unless you really love trains.[/note]\n\nFull details on how to use these may require online research (GTNH changes the recipes, not normal Railcraft functionality), but here is a simple list of things to do:\n\n1. Make a loop of track from your base to the oil well.\n2. Place a locking track near the well, and put a fluid loader two blocks above it. The track should be in Locking Mode - use a crowbar to change it.\n3. Use the tank car on the filter in the loader and set it to Immediate mode.\n4. Connect the well to the loader as normal.\n5. Put a fluid unloader under a locking track at your base, and set it the same as the loader.\n6. Automate the locomotive similarly - a fluid loader above a steam locomotive set to manual and filtered to the locomotive.\n\nEither you got it working, you need to do more research, you realized it moves 32 buckets a trip and decided to just walk, or you can go to Discord and ask why anyone would build a train.\n\nItem loaders also exist, but the main use for them may be to refuel your locomotive.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Fluid Loader and Unloader",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    866
  ],
  "rewards": [],
  "tasks": []
}
