tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__GettingAround-bAal8kZ3R8eRTwaHgbYkKA==__FlyingLikeaEagIM-AAAAAAAAAAAAAAAAAAAIEg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2066,
  "prerequisites": [
    2065,
    237,
    1070
  ],
  "properties": {
    "auto_claim": false,
    "desc": "This cloak is a nice substitute for the Glider. There are plenty of other magical items worth a look in the Witching Gadgets tab.\nIf you want to toggle gliding with a key - configure binding for \"Hotkey for activating some worn items\" in control settings.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Flying Like a Eag - I Mean Raven",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2065,
    237,
    1070
  ],
  "rewards": [],
  "tasks": []
}
