tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__GettingAround-bAal8kZ3R8eRTwaHgbYkKA==__GliderWings-AAAAAAAAAAAAAAAAAAAChQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 645,
  "prerequisites": [
    65,
    486
  ],
  "properties": {
    "auto_claim": false,
    "desc": "If for some reason you want to be able to jump down a cliff without getting the message \"Player X fell from a high place\", a great idea would be to find a way to slow your fall. The store was out of feather falling potions, so make a hang glider instead.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Glider Wings",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    65,
    486
  ],
  "rewards": [],
  "tasks": []
}
