tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__GettingAround-bAal8kZ3R8eRTwaHgbYkKA==__InflatableBoot-AAAAAAAAAAAAAAAAAAACnQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 669,
  "prerequisites": [
    672,
    673
  ],
  "properties": {
    "auto_claim": false,
    "desc": "I meant to say boat... The inflatable boat is the first boat that doesn't break on impact with a solid block.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Inflatable Boot",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    672,
    673
  ],
  "rewards": [],
  "tasks": []
}
