tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__GettingAround-bAal8kZ3R8eRTwaHgbYkKA==__LetsGoLavaSurfin-BC7LS6iHTYW_U0-SuIA4Sg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 12143760156949231690,
  "prerequisites": [
    243,
    1177,
    1664154019548398429
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Thaumium Boat is an upgraded version of your Greatwood Boat. The experience you have gained from manufacturing boats made of magical materials allows you to create a boat that can go even faster. Additionally, the Thaumium coating allows it to sail not only in rivers but also lava streams! Take it with you on your vacation in the Nether and enjoy.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Let's Go Lava Surfing!",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    243,
    1177,
    1664154019548398429
  ],
  "rewards": [],
  "tasks": []
}
